--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -15,6 +15,10 @@ body {
   padding: 0;
 }
 
+.header-shadow {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+/* 
 h1,
 h2,
 p {
@@ -45,11 +49,6 @@ h4 {
 h5 {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
-}
-
-p {
-  font-size: 1rem;
-  line-height: 1.4;
 }
 
 a {
@@ -136,4 +135,4 @@ code {
   border-radius: 4px;
   font-family: monospace;
   padding: 0.25rem;
-}
+} */
